# omega-walls

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README_PYPI.md  SECURITY.md  Taskfile.yml  pyproject.toml  requirements-dev.txt
config/: README.md  api.yml  benchmark_datasets.yml  deepset.yml  notifications.yml  off_policy.yml  oss_export_allowlist.json  oss_export_github.json  pi0_defaults.yml  pi0_semantic.yml  pitheta_dataset_registry.yml  pitheta_train.yml  projector.yml  retriever.yml  source_policy.yml  tools.yml
docs/: README.md  architecture.md  benchmark_data_sources.md  config.md  custom_integration_from_scratch.md  debugging_workflow_failures.md  framework_integrations_quickstart.md  framework_matrix_stand.md  hard negatives v1.md  logging_and_audit.md  logging_contract.md  math.md  memory_hygiene_contract.md  monitoring_alerts.md  omega_walls_v1.md  openclaw_integration.md  policy_pack_devops_minimal.md  policy_tuning.md  public_results_snapshot.json  quickstart.md  real_agent_stand_runbook.md  redteam_generator.md  release_surfaces.md  rule-based intent-aware v2.md  secure_agent_template.md  tests_and_eval.md  workflow_continuity.md
notebooks/: pitheta_cloud_train.ipynb
omega/: __init__.py  __main__.py  cli.py  errors.py  log_contract.py  oss_runtime.py  sdk.py  sdk_types.py  structured_logging.py
redteam/: generator.py  runner.py  whitebox_optimizer.py
schemas/: README.md  attack_layer_manifest_gold_v1.json  enforcement_step_v1.json  enterprise_attack_dashboard_feed_v1.json  evidence_debug_event_v1.json  incident_artifact_v1.json  omega_off_v1.json  policy_decision_event_v1.json  policy_diff_v1.json  replay_input_v1.json  replay_result_v1.json  tool_gateway_step_v1.json
scripts/: analyze_deepset_fn.py  audit_attack_pack_quality.py  audit_pitheta_weak_labels.py  benchmark_omega_latency.py  build_agentdojo_cocktail_mini_pack.py  build_attack_layer_api_pack_v1.py  build_attack_layer_api_pack_v2.py  build_attack_layer_pack_v1.py  build_comparative_report.py  build_enterprise_attack_dashboard.py  build_enterprise_incident_backlog.py  build_enterprise_weekly_report.py  build_gold_slice_prefill.py  build_ipi_arena_eval_pack.py  build_partner_policy_pack.py  build_pitheta_calibration_split.py  build_pitheta_dataset.py  build_promptshield_iter1_casepack.py  build_redteam_cross_source_session_pack.py  build_session_benchmark_pack.py  build_stateful_missed_forensic_report.py  build_stateful_only_support_pack.py  build_strict_pi_holdout.py  build_wainject_tail_iter3_casepack.py  build_wainjectbench_text_report.py  check_architecture_boundaries.py  check_docker_image_hygiene.py  check_fw001_perf_gate.py  check_iteration_gates.py  enterprise_rollback.py  eval_agentdojo_stateful_mini.py  eval_attachment_ingestion.py  eval_partner_policy_pack.py  eval_pint_omega.py  eval_pitheta.py  eval_promptshield_text.py  eval_session_pi_gate.py  eval_session_stateful_focus_gate.py  eval_strict_pi_gate.py  eval_support_stateful_vs_stateless.py  (+56 more)
tests/: conftest.py  fw001_core_suite.txt  helpers.py  rb_hardening_fuzz.py  rb_hardening_suite_cases.py  test_adapter_runtime.py  test_api_attachment_scan.py  test_api_attachment_security.py  test_api_chunk_pipeline.py  test_api_cli_missing_deps.py  test_api_hybrid_projector.py  test_api_monitor_mode.py  test_api_notifications.py  test_api_session_runtime.py  test_approval_resume_e2e.py  test_attachment_eval_report.py  test_attachment_ingestion.py  test_attachment_ingestion_determinism.py  test_autogen_guard.py  test_autogen_guard_smoke.py  test_bipia_adapter.py  test_bipia_manifest.py  test_bipia_prepare.py  test_build_agentdojo_cocktail_mini_pack.py  test_build_attack_layer_api_pack_v1.py  test_build_attack_layer_api_pack_v2.py  test_build_attack_layer_pack_v1.py  test_build_comparative_report.py  test_build_partner_policy_pack.py  test_build_pitheta_calibration_split.py  test_build_promptshield_iter1_casepack.py  test_check_iteration_gates.py  test_ci_docker_multiarch_workflow.py  test_ci_framework_contract_workflow.py  test_ci_framework_matrix_nightly_workflow.py  test_cli_entrypoints.py  (+133 more)
(+529 files in other folders)
